--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  background-color: #f3f3f3;
+  background-color: #ffffff;
   color: #222;
 }
 
